--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.22.0",
     "vue": "^2.5.11",
     "vue-router": "^3.5.3",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.0.1"
   },
   "browserslist": [
