--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
     "jwt-decode": "^3.1.2",
+    "sweetalert2": "^11.4.13",
     "vue": "^2.5.11",
     "vue-router": "^3.5.3",
     "vuelidate": "^0.7.7",
